Fusion-Qa-Final/src/objects/Artwork__c.object
<CustomObject>
    <fields>
        <fullName>Art_Approval_Email_Sent_At__c</fullName>
        <label>Art Approval Email Sent At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Art_BMP_URL__c</fullName>
        <label>Art BMP URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Art_JSON__c</fullName>
        <label>Art JSON</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Art_work_status_external__c</fullName>
        <label>Art work status external</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Art_work_status_internal__c</fullName>
        <label>Art work status internal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FlatImage__c</fullName>
        <label>FlatImage</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Laser_Art_Approved_Error__c</fullName>
        <label>Laser Art Approved Error</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Laser_Art_Asset_URL__c</fullName>
        <label>Laser Art Asset URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Laser_Art_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Laser Art Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Laser_Art_Front__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Laser Art Front</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Artworks</relationshipLabel>
        <relationshipName>Artworks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Header</label>
        <referenceTo>Quote_Header__c</referenceTo>
        <relationshipLabel>Artworks</relationshipLabel>
        <relationshipName>Artworks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Item</label>
        <referenceTo>Quote_Item_Level__c</referenceTo>
        <relationshipLabel>Artworks</relationshipLabel>
        <relationshipName>Artworks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Released_to_Laser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Released to Laser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPK__c</fullName>
        <label>UPK</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ramsideloc__c</fullName>
        <label>ramsideloc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Artwork</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artworks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>